force-app/main/default/objects/clariti__Payment_Processor_Setting__mdt/clariti__Payment_Processor_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Payment Processor Setting</label>
    <pluralLabel>Payment Processor Settings</pluralLabel>
</CustomObject>