force-app/main/default/objects/clariti__Payment_Processor_Setting__mdt/fields/clariti__PaymentType__c.field-meta.xml
<CustomField>
    <fullName>clariti__PaymentType__c</fullName>
    <label>PaymentType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card</fullName>
                <default>true</default>
                <label>Card</label>
            </value>
            <value>
                <fullName>DirectDebit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>