force-app/main/default/objects/clariti__Payment_Processor_Setting__mdt/fields/clariti__Text__c.field-meta.xml
<CustomField>
    <fullName>clariti__Text__c</fullName>
    <label>Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>