force-app/main/default/objects/clariti__Payment_Processor_Setting__mdt/fields/clariti__Text_Area_Long__c.field-meta.xml
<CustomField>
    <fullName>clariti__Text_Area_Long__c</fullName>
    <label>Text Area Long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>